--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!doctypehtml><html lang=pt-BR><meta charset=utf-8><title>Rugplicate Sim</title><meta content="width=device-width,initial-scale=1"name=viewport><meta content=#0f172a name=theme-color><link href=https://fonts.gstatic.com rel=preconnect crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap"rel=stylesheet><div id=root></div><script src=/src/main.jsx type=module></script>
+<!doctypehtml>
+<html lang=pt-BR>
+   <meta charset=utf-8>
+   <title>Rugplicate Sim</title>
+   <meta content="width=device-width,initial-scale=1"name=viewport>
+   <meta content=#0f172a name=theme-color>
+   <link href=https://fonts.gstatic.com rel=preconnect crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap"rel=stylesheet>
+   <div id=root></div>
+   <script src=/src/main.jsx type=module></script>
