--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Rugplicate</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0f172a" />
+
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap"
